objects/Transaction__c.object
<CustomObject>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10% Deposit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Remaining Amount</fullName>
                </value>
                <value>
                    <fullName>Rent started w/o move in</fullName>
                </value>
                <value>
                    <fullName>Pet Deposit</fullName>
                </value>
                <value>
                    <fullName>100% Deposit</fullName>
                </value>
                <value>
                    <fullName>Respite Days set</fullName>
                </value>
                <value>
                    <fullName>Reservation Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Type__c</fullName>
        <label>Legacy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Prospect_Id__c</fullName>
        <label>Legacy Prospect Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_Apartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reserved Apartment</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Move_In_Date__c</fullName>
        <label>Expected Move In Date</label>
        <type>Date</type>
    </fields>
</CustomObject>